Fix -- margin instead of padding makes sure text stays obscured even if the div is too small to display an ellipsis

--- a/app/ng-weekly-scheduler.less
+++ b/app/ng-weekly-scheduler.less
@@ -151,7 +151,7 @@ multi-slider {
 
     .middle {
       overflow: hidden;
-      padding: 0 (@handleWidth * 1.5);
+      margin: 0 (@handleWidth * 1.5);
       text-overflow: ellipsis;
     }
 
